@@ -2,7 +2,7 @@ from pyramid.threadlocal import get_current_request
 from pyramid.exceptions import ConfigurationError
 from pyramid.url import route_url
 
-import {{package}}.helpers as helpers
+import {{package}}.lib.helpers as helpers
 
 def add_renderer_globals(event):
     """ A subscriber to the ``pyramid.events.BeforeRender`` events.  Updates
